--- a/chat-now-webapp/package.json
+++ b/chat-now-webapp/package.json
@@ -13,6 +13,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
+    "json-server": "^1.0.0-beta.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
