--- a/chat-now-webapp/package.json
+++ b/chat-now-webapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@microsoft/signalr": "^8.0.7",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.3",
